# ink-upgrade-template

./: .gitignore  Cargo.toml  Makefile  README.md  lib.rs  package.json  tsconfig.json
proxy/: Cargo.toml
proxy/src/: lib.rs
src/: app.ts
v1/: Cargo.toml
v1/src/: lib.rs
v2/: Cargo.toml
v2/src/: lib.rs
