[package]
name = "upgradeability"
version = "0.1.0"
authors = ["Hugo Peixoto <hugo.peixoto@gmail.com>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc2", default-features = false }
ink_metadata = { version = "3.0.0-rc2", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc2", default-features = false }
ink_storage = { version = "3.0.0-rc2", default-features = false }
ink_lang = { version = "3.0.0-rc2", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.4.1", default-features = false, features = ["derive"], optional = true }

[lib]
name = "upgradeability"
path = "lib.rs"
crate-type = [
  "cdylib",
  "rlib",
]

[features]
default = ["std"]
std = [
  "ink_primitives/std",
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "scale/std",
  "scale-info/std",
]
ink-as-dependency = []

[workspace]
members = [
  "v1",
  "proxy",
]
