[package]
name = "proxy"
version = "0.1.0"
authors = ["Hugo Peixoto <hugo.peixoto@gmail.com>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_prelude = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

v1 = { version = "0.1.0", path = "../v1", default-features = false, features = ["ink-as-dependency"] }
upgradeability = { version = "0.1.0", path = "..", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "proxy"
path = "src/lib.rs"
crate-type = [
  "cdylib",
  "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "v1/std",
    "upgradeability/std",
]
ink-as-dependency = []
